Add header and Who we are

--- a/week01/index.html
+++ b/week01/index.html
@@ -30,5 +30,59 @@
                 1234 Somewhere Road #8254 Mashville, TN 00000-0000
             </p>
         </aside>
+        <main>
+            <div>
+                <h1>
+                    Trackgenix
+                </h1>
+                <h2>
+                    By GigaTech Sowtware Solutions SA
+                </h2>
+                <p>
+                    The company GigaTech Sowtware Solutions SA provides sowtware development services to other companies,
+                </p>
+                <p>
+                    wich have too many employees. Because of this "Trackgenix" was created.
+                </p>
+                <p>
+                    "Trackgenix" is a web page that facilitates the registration of hours worked by each employee in each
+                </p>
+                <p>
+                    project and provides information to the companies so they can make better decisions.
+                </p>
+            </div>
+            <div>
+                <h2>
+                    Who we are
+                </h2>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
+                </p>
+                <p>
+                     dummy text of the printing and typesetting industry.Lorem Ipsum is simply text of the printing
+                </p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
+                <p>
+                    dummy text of the printing and typesetting industry.Lorem Ipsum is simply text of the printing
+                </p>
+                <p>
+                    and typesetting industry.
+                </p>
+            </div>
+            <div>
+                <h2>
+                    Why choose are?
+                </h2>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                </p>
+                <p>
+                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+                </p>
+                <p>
+                    
+                </p>
+            </div>
+        </main>
     </body>
 </html>
