--- a/week01/index.html
+++ b/week01/index.html
@@ -71,8 +71,12 @@
             </div>
             <div>
                 <h2>
-                    Why choose are?
+                    Why choose us?
                 </h2>
+                <h3>
+                    Productivy Booter
+                </h3>
+                <img src="pictures/Productivy Booter.png" alt="This is an image about Productivy Booter">
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                 </p>
@@ -80,7 +84,87 @@
                     the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
                 </p>
                 <p>
-                    
+                    make a type specimen book.
+                </p>
+                <h3>
+                    Work Traceability
+                </h3>
+                <img src="pictures/Work Traceability.png" alt="This is an image about Productivy Booter">
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                </p>
+                <p>
+                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+                </p>
+                <p>
+                    make a type specimen book.
+                </p>
+                <h3>
+                    Leadership and team management
+                </h3>
+                <img src="pictures/Leadership and team management.png" alt="This is an image about Leadership and team management">
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                </p>
+                <p>
+                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+                </p>
+                <p>
+                     make a type specimen book.
+                </p>
+                <h3>
+                    Decision making
+                </h3>
+                <img src="pictures/Decision making.png" alt="This is an image about Decision making">
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                </p>
+                <p>
+                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+                </p>
+                <p>
+                    make a type specimen book.
+                </p>
+            </div>
+            <div>
+                <h2>
+                    Funcionalities
+                </h2>
+                <h3>
+                    Hours Log
+                </h3>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                </p>
+                <p>
+                    the industry's standard.
+                </p>
+                <h3>
+                    Resource management
+                </h3>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                </p>
+                <p>
+                    the industry's standard.
+                </p>
+                <h3>
+                    Reports
+                </h3>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                </p>
+                <p>
+                    the industry's standard.
+                </p>
+                <h3>
+                    Multiple Roles
+                </h3>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                </p>
+                <p>
+                    the industry's standard.s
                 </p>
             </div>
         </main>
