Add Contact and error correction

--- a/week01/index.html
+++ b/week01/index.html
@@ -8,15 +8,15 @@
             <h2>
                 Trackgenix
             </h2>
-            <button>
+            <a href="#">
                 Home
-            </button>
-            <button>
+            </a>
+            <a href="#">
                 SignUp
-            </button>
-            <button>
+            </a>
+            <a href="#">
                 Login
-            </button>
+            </a>
             <h3>
                 Contact Us
             </h3>
@@ -31,7 +31,7 @@
             </p>
         </aside>
         <main>
-            <div>
+            <section>
                 <h1>
                     Trackgenix
                 </h1>
@@ -50,8 +50,8 @@
                 <p>
                     project and provides information to the companies so they can make better decisions.
                 </p>
-            </div>
-            <div>
+            </section>
+            <section>
                 <h2>
                     Who we are
                 </h2>
@@ -68,8 +68,8 @@
                 <p>
                     and typesetting industry.
                 </p>
-            </div>
-            <div>
+            </section>
+            <section>
                 <h2>
                     Why choose us?
                 </h2>
@@ -125,10 +125,10 @@
                 <p>
                     make a type specimen book.
                 </p>
-            </div>
-            <div>
+            </section>
+            <section>
                 <h2>
-                    Funcionalities
+                    Functionalities
                 </h2>
                 <h3>
                     Hours Log
@@ -164,9 +164,48 @@
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                 </p>
                 <p>
-                    the industry's standard.s
+                    the industry's standard.
                 </p>
-            </div>
+            </section>
+            <section>
+                <h2>
+                    Contact
+                </h2>
+                <form action="">
+                <label>
+                    Name
+                </label>
+                <input placeholder="Your name here">
+                <label>
+                    Email
+                </label>
+                <input placeholder="Your email here">
+                <label>
+                    Contact Area
+                </label>
+                <select>
+                    <option value="human Resources">
+                        Human Resources
+                    </option>
+                    <option value="systems">
+                        Systems
+                    </option>
+                    <option value="commercialization">
+                        Commercialization
+                    </option>
+                </select>
+                <label>
+                    Message
+                </label>
+                <input placeholder="Your Message Here">
+                </form>
+                <button>
+                    Send Message
+                </button>
+                <button>
+                    Reset
+                </button>
+            </section>
         </main>
     </body>
 </html>
