Add pictures and error correction

--- a/week01/index.html
+++ b/week01/index.html
@@ -1,34 +1,37 @@
-<html>
-    <head>
-        <title>Trackgenix</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trackgenix</title>
     </head>
     <body>
         <aside>
-            <img src="Pictures/Logo.html.png" alt="Logo Picture">
-            <h2>
-                Trackgenix
-            </h2>
-            <a href="#">
-                Home
-            </a>
-            <a href="#">
-                SignUp
-            </a>
-            <a href="#">
-                Login
-            </a>
-            <h3>
-                Contact Us
-            </h3>
-            <p>
-                trackgenix@gmail.com
-            </p>
-            <p>
-                (000) 000-0000
-            </p>
-            <p>
-                1234 Somewhere Road #8254 Mashville, TN 00000-0000
-            </p>
+            <nav>
+                <img src="Pictures/Logo.html.png" alt="Logo Picture">
+                <h2>
+                    Trackgenix
+                </h2>
+                <span><img src="Pictures/Home-Icon.png" alt="Home logo">Home</span>
+                <span><img src="Pictures/SignUp-Icon.png" alt="Home Logo">SignUp</span>
+                <span><img src="Pictures/Login-logo.png" alt="Login logo">Login</span>
+            </nav>
+            <div>
+                <h4>Contact Us</h4>
+            </div>
+            <div>
+                <img src="pictures/Mail-Icon.png" alt="envolope">
+                <h5>trackgenix@gmail.com</h5>
+            </div>
+            <div>
+                <img src="pictures/Phone-Icon.png" alt="Phone">
+                <h5>(000) 00000-0000</h5>
+            </div>
+            <div>
+                <img src="pictures/Address-Icon.png" alt="Address">
+                <h5>1234 Somewhere Road #8254.Nashville,TN 00000-0000</h5>
+            </div>
         </aside>
         <main>
             <section>
@@ -46,8 +49,6 @@
                 </p>
                 <p>
                     "Trackgenix" is a web page that facilitates the registration of hours worked by each employee in each
-                </p>
-                <p>
                     project and provides information to the companies so they can make better decisions.
                 </p>
             </section>
@@ -57,15 +58,11 @@
                 </h2>
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
-                </p>
-                <p>
                      dummy text of the printing and typesetting industry.Lorem Ipsum is simply text of the printing
                 </p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
                 <p>
                     dummy text of the printing and typesetting industry.Lorem Ipsum is simply text of the printing
-                </p>
-                <p>
                     and typesetting industry.
                 </p>
             </section>
@@ -82,8 +79,6 @@
                 </p>
                 <p>
                     the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-                </p>
-                <p>
                     make a type specimen book.
                 </p>
                 <h3>
@@ -95,8 +90,6 @@
                 </p>
                 <p>
                     the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-                </p>
-                <p>
                     make a type specimen book.
                 </p>
                 <h3>
@@ -108,8 +101,6 @@
                 </p>
                 <p>
                     the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-                </p>
-                <p>
                      make a type specimen book.
                 </p>
                 <h3>
@@ -118,11 +109,7 @@
                 <img src="pictures/Decision making.png" alt="This is an image about Decision making">
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                </p>
-                <p>
                     the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-                </p>
-                <p>
                     make a type specimen book.
                 </p>
             </section>
@@ -135,8 +122,6 @@
                 </h3>
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                </p>
-                <p>
                     the industry's standard.
                 </p>
                 <h3>
@@ -144,8 +129,6 @@
                 </h3>
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                </p>
-                <p>
                     the industry's standard.
                 </p>
                 <h3>
@@ -153,8 +136,6 @@
                 </h3>
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                </p>
-                <p>
                     the industry's standard.
                 </p>
                 <h3>
@@ -162,8 +143,6 @@
                 </h3>
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                </p>
-                <p>
                     the industry's standard.
                 </p>
             </section>
