BaSP-W01-2022:Done with general bug fixes. Add the footer.

--- a/week01/index.html
+++ b/week01/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trackgenix</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>
+            Trackgenix
+        </title>
     </head>
     <body>
         <aside>
@@ -13,110 +15,120 @@
                 <h2>
                     Trackgenix
                 </h2>
-                <span><img src="Pictures/Home-Icon.png" alt="Home logo">Home</span>
-                <span><img src="Pictures/SignUp-Icon.png" alt="Home Logo">SignUp</span>
-                <span><img src="Pictures/Login-logo.png" alt="Login logo">Login</span>
+                <span>
+                    <img src="Pictures/Home-Icon.png" alt="Home logo">Home
+                </span>
+                <span>
+                    <img src="Pictures/SignUp-Icon.png" alt="Home Logo">SignUp
+                </span>
+                <span>
+                    <img src="Pictures/Login-Icon.png" alt="Login logo">Login
+                </span>
             </nav>
             <div>
-                <h4>Contact Us</h4>
+                <h3>Contact Us</h3>
             </div>
             <div>
-                <img src="pictures/Mail-Icon.png" alt="envolope">
-                <h5>trackgenix@gmail.com</h5>
+                <img src="Pictures/Mail-Icon.png" alt="envolope">
+                <h4>trackgenix@gmail.com</h4>
             </div>
             <div>
-                <img src="pictures/Phone-Icon.png" alt="Phone">
-                <h5>(000) 00000-0000</h5>
+                <img src="Pictures/Phone-Icon.png" alt="Phone">
+                <h4>(000) 00000-0000</h4>
             </div>
             <div>
-                <img src="pictures/Address-Icon.png" alt="Address">
-                <h5>1234 Somewhere Road #8254.Nashville,TN 00000-0000</h5>
+                <img src="Pictures/Address-Icon.png" alt="Address">
+                <h4>
+                    1234 Somewhere Road #8254.Nashville,TN 00000-0000
+                </h4>
             </div>
         </aside>
-        <main>
-            <section>
-                <h1>
-                    Trackgenix
-                </h1>
-                <h2>
-                    By GigaTech Sowtware Solutions SA
-                </h2>
-                <p>
-                    The company GigaTech Sowtware Solutions SA provides sowtware development services to other companies,
-                </p>
-                <p>
-                    wich have too many employees. Because of this "Trackgenix" was created.
-                </p>
-                <p>
-                    "Trackgenix" is a web page that facilitates the registration of hours worked by each employee in each
-                    project and provides information to the companies so they can make better decisions.
-                </p>
-            </section>
-            <section>
+        <header>
+            <h1>
+                Trackgenix
+            </h1>
+            <h2>
+                By GigaTech Sowtware Solutions SA
+        </header>
+        <div>
+            <p>
+                The company GigaTech Sowtware Solutions SA provides sowtware development services to other
+                companies,wich have too many employees. Because of this "Trackgenix" was created.
+            </p>
+            <p>
+                "Trackgenix" is a web page that facilitates the registration of hours worked by each employee in each
+                project and provides information to the companies so they can make better decisions.
+            </p>
+        </div>
+        </section>
+            <article>
+                <img src="pictures/Picture Header.png" alt="Work space Trackgenix">
                 <h2>
                     Who we are
                 </h2>
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
-                     dummy text of the printing and typesetting industry.Lorem Ipsum is simply text of the printing
+                    dummy text of the printing and typesetting industry.Lorem Ipsum is simply text of the printing
                 </p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
                 <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
                     dummy text of the printing and typesetting industry.Lorem Ipsum is simply text of the printing
                     and typesetting industry.
                 </p>
-            </section>
-            <section>
-                <h2>
-                    Why choose us?
-                </h2>
-                <h3>
-                    Productivy Booter
-                </h3>
-                <img src="pictures/Productivy Booter.png" alt="This is an image about Productivy Booter">
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                </p>
-                <p>
-                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-                    make a type specimen book.
-                </p>
-                <h3>
-                    Work Traceability
-                </h3>
-                <img src="pictures/Work Traceability.png" alt="This is an image about Productivy Booter">
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                </p>
-                <p>
-                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-                    make a type specimen book.
-                </p>
-                <h3>
-                    Leadership and team management
-                </h3>
-                <img src="pictures/Leadership and team management.png" alt="This is an image about Leadership and team management">
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                </p>
-                <p>
-                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-                     make a type specimen book.
-                </p>
-                <h3>
-                    Decision making
-                </h3>
-                <img src="pictures/Decision making.png" alt="This is an image about Decision making">
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-                    make a type specimen book.
-                </p>
-            </section>
-            <section>
+        <section>
+            <h2>
+                Why choose us?
+            </h2>
+                <div>
+                    <h3>
+                        Productivy Booter
+                    </h3>
+                    <img src="pictures/Productivy Booter.png" alt="This is an image about Productivy Booter">
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+                        make a type specimen book.
+                    </p>
+                <div>
+                    <h3>
+                        Work Traceability
+                    </h3>
+                    <img src="pictures/Work Traceability.png" alt="This is an image about Productivy Booter">
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+                        make a type specimen book.
+                    </p>
+                </div>
+                <div>
+                    <h3>
+                        Leadership and team management
+                    </h3>
+                    <img src="pictures/Leadership and team management.png" alt="This is an image about Leadership and team management">
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+                        make a type specimen book.
+                    </p>
+                </div>
+                <div>
+                    <h3>
+                        Decision making
+                    </h3>
+                    <img src="pictures/Decision making.png" alt="This is an image about Decision making">
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+                        make a type specimen book.
+                    </p>
+                </div>
+        </section>
+        <section>
+            <article>
                 <h2>
                     Functionalities
                 </h2>
+            <div>
                 <h3>
                     Hours Log
                 </h3>
@@ -124,6 +136,8 @@
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                     the industry's standard.
                 </p>
+            </div>
+            <div>
                 <h3>
                     Resource management
                 </h3>
@@ -131,6 +145,8 @@
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                     the industry's standard.
                 </p>
+            </div>
+            <div>
                 <h3>
                     Reports
                 </h3>
@@ -138,6 +154,8 @@
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                     the industry's standard.
                 </p>
+            </div>
+            <div>
                 <h3>
                     Multiple Roles
                 </h3>
@@ -145,46 +163,103 @@
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                     the industry's standard.
                 </p>
-            </section>
-            <section>
-                <h2>
+            </div>
+            </article>
+        </section>
+        <section>
+            <h2>
+                Contact
+            </h2>
+            <form>
+                <div>
+                    <label>
+                        Name
+                    </label>
+                    <input type="text" name="Name" placeholder="Your Name here">
+                </div>
+                <div>
+                    <label>
+                        Contact Area
+                    </label>
+                    <select name="Area" aria-placeholder="Contact Area">
+                        <option value="Human Resources">
+                            Human Resources
+                        </option>
+                        <option value="Systems">
+                            Systems
+                        </option>
+                        <option value="Commercialization">
+                            Commercialization
+                        </option>
+                    </select>
+                </div>
+                <div>
+                    <label>
+                        Email
+                    </label>
+                    <input type="email" name="Email" placeholder="Your Name Here">
+                </div>
+                <div>
+                    <label>
+                        Message
+                    </label>
+                    <textarea name="message" placeholder="Your Message Here"></textarea>
+                </div>
+                    <input type="submit" name="Submit" value="Send Message">
+                    <input type="submit" name="Submit" value="Reset">
+            </form>
+        </section>
+        <nav>
+            <h4>
+                Product
+            </h4>
+            <ul>
+                <li>
+                    Features
+                </li>
+                <li>
+                    Downloads
+                </li>
+                <li>
+                    Integrations
+                </li>
+                <li>
+                    Additional features
+                </li>
+            </ul>
+            <h4>
+                Enterprise
+            </h4>
+            <ul>
+                <li>
+                    About us
+                </li>
+                <li>
+                    Clients
+                </li>
+                <li>
+                    Resources
+                </li>
+                <li>
+                    Blog
+                </li>
+            </ul>
+            <h4>
+                Support
+            </h4>
+            <ul>
+                <li>
+                    Helps
+            </li>
+                <li>
+                    Tutorials
+                </li>
+                <li>
+                    API
+                </li>
+                <li>
                     Contact
-                </h2>
-                <form action="">
-                <label>
-                    Name
-                </label>
-                <input placeholder="Your name here">
-                <label>
-                    Email
-                </label>
-                <input placeholder="Your email here">
-                <label>
-                    Contact Area
-                </label>
-                <select>
-                    <option value="human Resources">
-                        Human Resources
-                    </option>
-                    <option value="systems">
-                        Systems
-                    </option>
-                    <option value="commercialization">
-                        Commercialization
-                    </option>
-                </select>
-                <label>
-                    Message
-                </label>
-                <input placeholder="Your Message Here">
-                </form>
-                <button>
-                    Send Message
-                </button>
-                <button>
-                    Reset
-                </button>
-            </section>
-        </main>
+                </li>
+            </ul>
     </body>
 </html>
