BaSP-W01-2022:Finish adding all the images

--- a/week01/index.html
+++ b/week01/index.html
@@ -16,28 +16,28 @@
                     Trackgenix
                 </h2>
                 <span>
-                    <img src="Pictures/Home-Icon.png" alt="Home logo">Home
+                    <img src="Pictures/Icons/Home-Icon.png" alt="Home logo">Home
                 </span>
                 <span>
-                    <img src="Pictures/SignUp-Icon.png" alt="Home Logo">SignUp
+                    <img src="Pictures/Icons/SignUp-Icon.png" alt="Home Logo">SignUp
                 </span>
                 <span>
-                    <img src="Pictures/Login-Icon.png" alt="Login logo">Login
+                    <img src="Pictures/Icons/Login-Icon.png" alt="Login logo">Login
                 </span>
             </nav>
             <div>
                 <h3>Contact Us</h3>
             </div>
             <div>
-                <img src="Pictures/Mail-Icon.png" alt="envolope">
+                <img src="Pictures/Icons/Mail-Icon.png" alt="envolope">
                 <h4>trackgenix@gmail.com</h4>
             </div>
             <div>
-                <img src="Pictures/Phone-Icon.png" alt="Phone">
+                <img src="Pictures/Icons/Phone-Icon.png" alt="Phone">
                 <h4>(000) 00000-0000</h4>
             </div>
             <div>
-                <img src="Pictures/Address-Icon.png" alt="Address">
+                <img src="Pictures/Icons/Addres-Icon.png" alt="Address">
                 <h4>
                     1234 Somewhere Road #8254.Nashville,TN 00000-0000
                 </h4>
@@ -62,15 +62,13 @@
         </div>
         </section>
             <article>
-                <img src="pictures/Picture Header.png" alt="Work space Trackgenix">
                 <h2>
                     Who we are
                 </h2>
+                <img src="Pictures/Picture Header.png" alt="Work space Trackgenix">
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
                     dummy text of the printing and typesetting industry.Lorem Ipsum is simply text of the printing
-                </p>
-                <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
                     dummy text of the printing and typesetting industry.Lorem Ipsum is simply text of the printing
                     and typesetting industry.
@@ -83,7 +81,7 @@
                     <h3>
                         Productivy Booter
                     </h3>
-                    <img src="pictures/Productivy Booter.png" alt="This is an image about Productivy Booter">
+                    <img src="Pictures/Productivy Booter.png" alt="This is an image about Productivy Booter">
                     <p>
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                         the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
@@ -132,6 +130,7 @@
                 <h3>
                     Hours Log
                 </h3>
+                <img src="pictures/Icons/Hours Log.png" alt="This is an image about Hour Log">
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                     the industry's standard.
@@ -141,6 +140,7 @@
                 <h3>
                     Resource management
                 </h3>
+                <img src="pictures/Icons/Resource Management.png" alt="This is an image about Resource Management">
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                     the industry's standard.
@@ -150,6 +150,7 @@
                 <h3>
                     Reports
                 </h3>
+                <img src="pictures/Icons/Reports.png" alt="This is an image about Reports">
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                     the industry's standard.
@@ -159,6 +160,7 @@
                 <h3>
                     Multiple Roles
                 </h3>
+                <img src="pictures/Icons/Multiple Roles.png" alt="This is an image about Multiple Roles">
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                     the industry's standard.
@@ -261,5 +263,34 @@
                     Contact
                 </li>
             </ul>
+        </nav>
+        <footer>
+            <div>
+                <img src="pictures/Icons/LinkedIn - Negative.png" alt="Linked In">
+                <a href="https://www.linkedin.com/" target="_blank"></a>
+            </div>
+            <div>
+                <img src="pictures/Icons/Facebook - Negative.png" alt="Facebook">
+                <a href="https://www.facebook.com/" target="_blank"></a>
+            </div>
+            <div>
+                <img src="pictures/Icons/Twitter - Negative.png" alt="Twitter">
+                <a href="https://twitter.com//" target="_blank"></a>
+            </div>
+            <div>
+                <img src="pictures/Icons/Instagram - Negative.png" alt="Instagram">
+                <img src="https://www.instagram.com/" alt="">
+            </div>
+            <div>
+                <img src="pictures/Icons/Github - Negative.png" alt="Github">
+                <a href="https://github.com/" target="_blank"></a>
+            </div>
+            <p>
+                Rosario, Argentina
+            </p>
+            <p>
+                Copyright &copy; 2022 Radium Rocket. All right reserved.
+            </p>
+        </footer>
     </body>
 </html>
